--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "test"
   },
   "dependencies": {
+    "@slack/web-api": "^5.8.0",
+    "@slack/webhook": "^5.0.3",
     "commander": "^4.1.0",
     "puppeteer": "^2.0.0"
   },
