--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@slack/web-api": "^5.8.0",
     "@slack/webhook": "^5.0.3",
     "commander": "^4.1.0",
+    "date-utils": "^1.2.21",
     "puppeteer": "^2.0.0"
   },
   "devDependencies": {},
