--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ia-tools",
   "version": "1.0.0",
   "description": "",
-  "main": "register_shipment_by_chromium.js",
+  "main": "main.js",
   "directories": {
     "test": "test"
   },
@@ -11,20 +11,13 @@
     "@slack/webhook": "^5.0.3",
     "commander": "^4.1.0",
     "date-utils": "^1.2.21",
+    "electron": "^9.0.3",
     "puppeteer": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nombre-premier/ia-tools.git"
-  },
   "author": "",
-  "license": "UNLICENSED",
-  "bugs": {
-    "url": "https://github.com/nombre-premier/ia-tools/issues"
-  },
-  "homepage": "https://github.com/nombre-premier/ia-tools#readme"
+  "license": "UNLICENSED"
 }
