--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ia-tools",
+  "name": "mytools",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -11,8 +11,8 @@
     "@slack/webhook": "^5.0.3",
     "commander": "^4.1.0",
     "date-utils": "^1.2.21",
-    "electron": "^9.3.1",
-    "puppeteer": "^2.0.0"
+    "puppeteer": "^2.0.0",
+    "puppeteer-core": "^5.5.0"
   },
   "devDependencies": {},
   "scripts": {
